--- a/app/src/main/res/layout/activity_customer.xml
+++ b/app/src/main/res/layout/activity_customer.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
@@ -10,12 +9,9 @@
     tools:openDrawer="start">
 
     <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
@@ -56,7 +52,7 @@
                 android:id="@+id/btnCheckIn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="56dp"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="36dp"
                 android:width="150dp"
                 android:paddingLeft="15dp"
@@ -75,7 +71,7 @@
                 android:id="@+id/imageView5"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
-                android:layout_marginStart="30dp"
+                android:layout_marginStart="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/imageView6"
                 app:layout_constraintHorizontal_bias="0.287"
@@ -87,7 +83,7 @@
                 android:id="@+id/imageView6"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
-                android:layout_marginEnd="52dp"
+                android:layout_marginEnd="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -98,7 +94,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="36dp"
-                android:layout_marginEnd="52dp"
+                android:layout_marginEnd="20dp"
                 android:width="150dp"
                 android:paddingLeft="15dp"
                 android:paddingTop="15dp"
@@ -115,13 +111,14 @@
 
             <View
                 android:id="@+id/divider"
-                android:layout_width="5dp"
+                android:layout_width="3dp"
                 android:layout_height="400dp"
-                android:layout_marginStart="18dp"
-                android:layout_marginTop="216dp"
-                android:layout_marginEnd="18dp"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="100dp"
+                android:layout_marginEnd="10dp"
                 android:background="?android:attr/listDivider"
                 app:layout_constraintEnd_toStartOf="@+id/imageView6"
+                app:layout_constraintHorizontal_bias="0.7"
                 app:layout_constraintStart_toEndOf="@+id/imageView5"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -136,7 +133,7 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header"
-        app:menu="@menu/nav_menu"/>
+        app:menu="@menu/nav_menu" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
 
