--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -89,7 +89,7 @@
                     android:textSize="18sp" />
 
                 <EditText
-                    android:id="@+id/txtOrderNo"
+                    android:id="@+id/txtStaffID"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:autofillHints=""
