--- a/app/src/main/res/layout/activity_receipt.xml
+++ b/app/src/main/res/layout/activity_receipt.xml
@@ -36,7 +36,7 @@
                         style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Order Confirmation"
+                        android:text="Receipt"
                         android:textColor="@color/white" />
 
                 </LinearLayout>
