--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -89,7 +89,7 @@
                     android:textSize="18sp" />
 
                 <EditText
-                    android:id="@+id/txtOrderNo"
+                    android:id="@+id/txtName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:autofillHints=""
@@ -118,7 +118,7 @@
                     android:textSize="18sp" />
 
                 <EditText
-                    android:id="@+id/txtPassword"
+                    android:id="@+id/txtNumOfPeople"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:autofillHints=""
