--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -88,7 +88,7 @@
                         android:textSize="15sp" />
 
                     <EditText
-                        android:id="@+id/txtOrderNo"
+                        android:id="@+id/txtName"
                         android:layout_width="380dp"
                         android:layout_height="wrap_content"
                         android:autofillHints=""
@@ -151,7 +151,7 @@
                         android:textSize="15sp" />
 
                     <EditText
-                        android:id="@+id/txtStaffName"
+                        android:id="@+id/txtPhone"
                         android:layout_width="380dp"
                         android:layout_height="wrap_content"
                         android:autofillHints=""
@@ -182,7 +182,7 @@
                         android:textSize="15sp" />
 
                     <EditText
-                        android:id="@+id/txtStaffAddress"
+                        android:id="@+id/txtAddress"
                         android:layout_width="380dp"
                         android:layout_height="wrap_content"
                         android:autofillHints=""
@@ -211,7 +211,7 @@
                         android:textSize="15sp" />
 
                     <EditText
-                        android:id="@+id/txtPassword"
+                        android:id="@+id/txtNumOfPeople"
                         android:layout_width="380dp"
                         android:layout_height="wrap_content"
                         android:autofillHints=""
