--- a/app/src/main/res/layout/activity_remove_staff.xml
+++ b/app/src/main/res/layout/activity_remove_staff.xml
@@ -89,7 +89,7 @@
                         android:textSize="15sp" />
 
                     <EditText
-                        android:id="@+id/txtOrderNo"
+                        android:id="@+id/txtName"
                         android:layout_width="380dp"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="15dp"
