--- a/app/src/main/res/layout/activity_check_out_form.xml
+++ b/app/src/main/res/layout/activity_check_out_form.xml
@@ -89,7 +89,7 @@
                         android:textSize="15sp" />
 
                     <EditText
-                        android:id="@+id/txtOrderNo"
+                        android:id="@+id/txtName"
                         android:layout_width="380dp"
                         android:layout_height="wrap_content"
                         android:autofillHints=""
@@ -152,7 +152,7 @@
                         android:textSize="15sp" />
 
                     <EditText
-                        android:id="@+id/txtStaffName"
+                        android:id="@+id/txtPhone"
                         android:layout_width="380dp"
                         android:layout_height="wrap_content"
                         android:autofillHints=""
