--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -88,7 +88,7 @@
                         android:textSize="15sp" />
 
                     <EditText
-                        android:id="@+id/txtOrderNo"
+                        android:id="@+id/txtName"
                         android:layout_width="380dp"
                         android:layout_height="wrap_content"
                         android:autofillHints=""
@@ -162,7 +162,7 @@
                         android:textSize="15sp" />
 
                     <EditText
-                        android:id="@+id/txtStaffName"
+                        android:id="@+id/txtPhone"
                         android:layout_width="380dp"
                         android:layout_height="wrap_content"
                         android:autofillHints=""
@@ -193,7 +193,7 @@
                         android:textSize="15sp" />
 
                     <EditText
-                        android:id="@+id/txtStaffAddress"
+                        android:id="@+id/txtAddress"
                         android:layout_width="380dp"
                         android:layout_height="wrap_content"
                         android:autofillHints=""
@@ -222,7 +222,7 @@
                         android:textSize="15sp" />
 
                     <EditText
-                        android:id="@+id/txtPassword"
+                        android:id="@+id/txtNumOfPeople"
                         android:layout_width="380dp"
                         android:layout_height="wrap_content"
                         android:autofillHints=""
