--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -164,7 +164,7 @@
                         android:textSize="15sp" />
 
                     <EditText
-                        android:id="@+id/txtPassword"
+                        android:id="@+id/txtNumOfPeople"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:autofillHints=""
