--- a/app/src/main/res/layout/activity_manager_staff_portal.xml
+++ b/app/src/main/res/layout/activity_manager_staff_portal.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
@@ -10,9 +9,9 @@
     tools:openDrawer="start">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
@@ -84,12 +83,11 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    tools:layout_editor_absoluteX="0dp"
                     tools:layout_editor_absoluteY="-34dp">
 
                     <Button
                         android:id="@+id/btnCreateOrder"
-                        android:layout_width="150dp"
+                        android:layout_width="160dp"
                         android:layout_height="80dp"
                         android:layout_marginStart="20dp"
                         android:layout_marginTop="52dp"
@@ -100,12 +98,12 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <Button
-                        android:id="@+id/btnSearchBooking"
-                        android:layout_width="150dp"
+                        android:id="@+id/btnCheckRoom"
+                        android:layout_width="160dp"
                         android:layout_height="80dp"
                         android:layout_marginTop="52dp"
                         android:layout_marginEnd="20dp"
-                        android:text="Search Booking"
+                        android:text="Room Occupancy"
                         android:textAlignment="center"
                         android:textSize="18sp"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -113,7 +111,7 @@
 
                     <Button
                         android:id="@+id/btnManageProfile"
-                        android:layout_width="150dp"
+                        android:layout_width="160dp"
                         android:layout_height="80dp"
                         android:layout_marginStart="20dp"
                         android:layout_marginTop="10dp"
@@ -125,7 +123,7 @@
 
                     <Button
                         android:id="@+id/btnOrderHistory"
-                        android:layout_width="150dp"
+                        android:layout_width="160"
                         android:layout_height="80dp"
                         android:layout_marginTop="10dp"
                         android:layout_marginEnd="20dp"
@@ -133,11 +131,11 @@
                         android:textAlignment="center"
                         android:textSize="18sp"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/btnSearchBooking" />
+                        app:layout_constraintTop_toBottomOf="@+id/btnCheckRoom" />
 
                     <Button
                         android:id="@+id/btnCustomerActivity"
-                        android:layout_width="150dp"
+                        android:layout_width="160dp"
                         android:layout_height="80dp"
                         android:layout_marginStart="20dp"
                         android:layout_marginTop="10dp"
@@ -149,7 +147,7 @@
 
                     <Button
                         android:id="@+id/btnManageStaff"
-                        android:layout_width="150dp"
+                        android:layout_width="160dp"
                         android:layout_height="80dp"
                         android:layout_marginTop="10dp"
                         android:layout_marginEnd="20dp"
@@ -172,7 +170,7 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header"
-        app:menu="@menu/nav_menu"/>
+        app:menu="@menu/nav_menu" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
 
