--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -124,34 +124,51 @@
                         android:textAlignment="textStart"
                         android:textSize="15sp" />
 
-                    <RadioGroup
+                    <EditText
                         android:id="@+id/staffRole"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="wrap_content"
+                        android:autofillHints=""
+                        android:ems="10"
+                        android:inputType="textEmailAddress"
+                        android:labelFor="@id/TextView8"
+                        android:paddingLeft="15dp"
+                        android:paddingTop="15dp"
+                        android:paddingRight="15dp"
+                        android:paddingBottom="15dp"
+                        android:text=""
+                        android:textColor="#939191"
+                        android:textColorHighlight="#6DFFFFFF"
+                        android:textIsSelectable="false"
+                        android:textSize="15sp" />
+<!--                    <RadioGroup-->
+<!--                        android:id="@+id/staffRole"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="match_parent">-->
 
-                        <RadioButton
-                            android:id="@+id/Manager"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:paddingLeft="15dp"
-                            android:paddingTop="15dp"
-                            android:paddingRight="15dp"
-                            android:paddingBottom="15dp"
-                            android:text="Manager"
-                            android:textSize="15sp" />
+<!--                        <RadioButton-->
+<!--                            android:id="@+id/Manager"-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:paddingLeft="15dp"-->
+<!--                            android:paddingTop="15dp"-->
+<!--                            android:paddingRight="15dp"-->
+<!--                            android:paddingBottom="15dp"-->
+<!--                            android:text="Manager"-->
+<!--                            android:textSize="15sp" />-->
 
-                        <RadioButton
-                            android:id="@+id/Staff"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:paddingLeft="15dp"
-                            android:paddingTop="15dp"
-                            android:paddingRight="15dp"
-                            android:paddingBottom="15dp"
-                            android:text="Normal Staff"
-                            android:textSize="15sp" />
+<!--                        <RadioButton-->
+<!--                            android:id="@+id/Staff"-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:paddingLeft="15dp"-->
+<!--                            android:paddingTop="15dp"-->
+<!--                            android:paddingRight="15dp"-->
+<!--                            android:paddingBottom="15dp"-->
+<!--                            android:text="Normal Staff"-->
+<!--                            android:textSize="15sp" />-->
 
-                    </RadioGroup>
+<!--                    </RadioGroup>-->
                     <TextView
                         android:id="@+id/textView4"
                         android:layout_width="match_parent"
