--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -57,7 +57,7 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="374dp">
+                    android:layout_height="398dp">
 
                     <TextView
                         android:id="@+id/txtBookingID"
@@ -75,33 +75,104 @@
                         tools:text="Order ID" />
 
                     <TextView
-                        android:id="@+id/txtOrderStatus"
+                        android:id="@+id/txtCheckInDay"
                         android:layout_width="wrap_content"
-                        android:layout_height="54dp"
+                        android:layout_height="wrap_content"
                         android:layout_marginStart="30dp"
-                        android:layout_marginTop="10dp"
+                        android:layout_marginTop="5dp"
                         android:paddingLeft="15sp"
                         android:paddingTop="15sp"
-                        android:paddingRight="15sp"
+                        android:paddingRight="5sp"
                         android:paddingBottom="15sp"
                         android:textSize="18sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/txtBookingID"
-                        tools:text="Staying Period" />
+                        tools:text="Check In Day" />
+
+                    <TextView
+                        android:id="@+id/txtCheckOutDay"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="30dp"
+                        android:layout_marginTop="5dp"
+                        android:paddingLeft="15sp"
+                        android:paddingTop="15sp"
+                        android:paddingRight="5sp"
+                        android:paddingBottom="15sp"
+                        android:textSize="18sp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/txtCheckInDay"
+                        tools:text="Check Out Day" />
+
+                    <TextView
+                        android:id="@+id/txtCheckInMonth"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="89dp"
+                        android:paddingLeft="0sp"
+                        android:paddingTop="15sp"
+                        android:paddingRight="5sp"
+                        android:paddingBottom="15sp"
+                        android:textSize="18sp"
+                        app:layout_constraintStart_toEndOf="@+id/txtCheckInDay"
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:text="Check In Month" />
+
+                    <TextView
+                        android:id="@+id/txtCheckInYear"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="89dp"
+                        android:paddingLeft="0sp"
+                        android:paddingTop="15sp"
+                        android:paddingRight="15sp"
+                        android:paddingBottom="15sp"
+                        android:textSize="18sp"
+                        app:layout_constraintStart_toEndOf="@+id/txtCheckInMonth"
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:text="Check In Year" />
+
+                    <TextView
+                        android:id="@+id/txtCheckOutMonth"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
+                        android:paddingLeft="0sp"
+                        android:paddingTop="15sp"
+                        android:paddingRight="5sp"
+                        android:paddingBottom="15sp"
+                        android:textSize="18sp"
+                        app:layout_constraintStart_toEndOf="@+id/txtCheckOutDay"
+                        app:layout_constraintTop_toBottomOf="@+id/txtCheckInMonth"
+                        tools:text="Check Out Month" />
+
+                    <TextView
+                        android:id="@+id/txtCheckOutYear"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
+                        android:paddingLeft="0sp"
+                        android:paddingTop="15sp"
+                        android:paddingRight="15sp"
+                        android:paddingBottom="15sp"
+                        android:textSize="18sp"
+                        app:layout_constraintStart_toEndOf="@+id/txtCheckOutMonth"
+                        app:layout_constraintTop_toBottomOf="@+id/txtCheckInYear"
+                        tools:text="Check Out Year" />
 
                     <TextView
                         android:id="@+id/txtCustName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="30dp"
-                        android:layout_marginTop="10dp"
+                        android:layout_marginTop="5dp"
                         android:paddingLeft="15sp"
                         android:paddingTop="15sp"
                         android:paddingRight="15sp"
                         android:paddingBottom="15sp"
                         android:textSize="18sp"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/txtOrderStatus"
+                        app:layout_constraintTop_toBottomOf="@+id/txtCheckOutDay"
                         tools:text="Customer Name" />
 
                     <TextView
@@ -123,8 +194,8 @@
                         android:id="@+id/paymentMethod"
                         android:layout_width="320dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginTop="20dp"
+                        android:layout_marginStart="30dp"
+                        android:layout_marginTop="10dp"
                         android:background="@android:drawable/btn_dropdown"
                         android:spinnerMode="dropdown"
                         app:layout_constraintStart_toStartOf="parent"
